2006-12-23  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/gtksourcecontextengine.c,
	gtksourceview/gtksourcecontextengine.h,
	gtksourceview/gtksourcelanguage.c,
	gtksourceview/gtksourcelanguage-private.h,
	gtksourceview/gtksourcelanguage-parser-1.c,
	gtksourceview/gtksourcelanguage-parser-2.c:
	Made context definitions shared between engines using same language:
	added GtkSourceContextData structure which holds definitions, and made
	GtkSourceContextEngine refer to it.

2006-12-23  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/gtksourcecontextengine.c: added memory information
	stuff: it can print how much memory is taken by context definitions
	and by contexts.
	* gtksourceview/libegg/regex/eggregex.c,
	gtksourceview/libegg/regex/eggregex.h: (_egg_regex_get_memory):
	new function to get amount of memory eaten by regex.

2006-12-23  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/gtksourcecontextengine.c: (resolve_reference),
	(_gtk_source_context_engine_add_ref): Made it treat references
	to pure container contexts as wildcard references, so
	<context id="foo"><include>...</include></context>
	<context id="bar"><include><context ref="foo"></include></context>
	is silently translated to
	<context id="foo"><include>...</include></context>
	<context id="bar"><include><context ref="foo:*"></include></context>

2006-12-23  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/gtksourcelanguage-parser-2.c:
	Fixed parsing keyword lists: it lost keywords before
	a comment, if a comment was inside the list.
	(str_to_bool): made it take xmlChar* to avoid casts in its users code;
	(update_regex_flags): made it take xmlChar* instead of gboolean since
	all its users called str_to_bool() on the argument anyway;
	(get_regex_flags): moved getting regex options attributes from
	create_definition() to new function;
	(create_definition): the keywords fix.

2006-12-21  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/language-specs/csharp.lang,