@@ -1,3 +1,15 @@
+2006-12-24  Yevgen Muntyan  <muntyan@tamu.edu>
+
+	* gtksourceview/gtksourcelanguage-parser-2.c:
+	Fixed mapping styles: it skipped intermediate styles, i.e.
+	<style id="foo" map-to="moo"/>
+	<style id="moo" map-to="baz"/>
+	was treated as
+	<style id="foo" map-to="baz"/>
+	<style id="moo" map-to="baz"/>.
+	* gtksourceview/gtksourcecontextengine.c:
+	Some doc clean up.
+
 2006-12-23  Yevgen Muntyan  <muntyan@tamu.edu>
 
 	* gtksourceview/gtksourcecontextengine.c,
